{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 141,
  "lineage": "5f562c7d-f7e2-3418-eb14-2510b787dfc5",
  "resources": [
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "testvmnic",
      "provider": "module.adb-with-private-link-standard.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/networkInterfaces/tfdemo-xb8rpa-testvm-nic",
            "internal_domain_name_suffix": "nxtsvkwcnohufkht54zpulqbqa.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testvmip",
                "primary": true,
                "private_ip_address": "10.178.6.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/publicIPAddresses/tfdemo-xb8rpa-vmpublicip",
                "subnet_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-xb8rpa-transit-vnet/subnets/tfdemo-xb8rpa-testvmsubnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-BC-D5-E0",
            "name": "tfdemo-xb8rpa-testvm-nic",
            "private_ip_address": "10.178.6.4",
            "private_ip_addresses": [
              "10.178.6.4"
            ],
            "resource_group_name": "adb-transit-tfdemo-xb8rpa-rg",
            "virtual_machine_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Compute/virtualMachines/tfdemo-xb8rpavm"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_public_ip.testvmpublicip",
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.azurerm_subnet.testvmsubnet",
            "module.adb-with-private-link-standard.azurerm_virtual_network.transit_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "testvmnsgassoc",
      "provider": "module.adb-with-private-link-standard.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/networkInterfaces/tfdemo-xb8rpa-testvm-nic|/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-xb8rpa-testvm-nsg",
            "network_interface_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/networkInterfaces/tfdemo-xb8rpa-testvm-nic",
            "network_security_group_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-xb8rpa-testvm-nsg"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_network_interface.testvmnic",
            "module.adb-with-private-link-standard.azurerm_network_security_group.testvm-nsg",
            "module.adb-with-private-link-standard.azurerm_public_ip.testvmpublicip",
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.azurerm_subnet.testvmsubnet",
            "module.adb-with-private-link-standard.azurerm_virtual_network.transit_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "dp_sg",
      "provider": "module.adb-with-private-link-standard.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dp-tfdemo-xb8rpa-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-xb8rpa-dp-nsg",
            "location": "westeurope",
            "name": "tfdemo-xb8rpa-dp-nsg",
            "resource_group_name": "adb-dp-tfdemo-xb8rpa-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "AzureActiveDirectory",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowAAD-dp",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "AzureFrontDoor.Frontend",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowAzureFrontDoor-dp",
                "priority": 201,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker communication with Azure Eventhub services.",
                "destination_address_prefix": "EventHub",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9093",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-eventhub",
                "priority": 103,
                "protocol": "tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker nodes communication within a cluster.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-inbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker nodes communication within a cluster.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-outbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Azure SQL services.",
                "destination_address_prefix": "Sql",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-sql",
                "priority": 101,
                "protocol": "tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Azure Storage services.",
                "destination_address_prefix": "Storage",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-storage",
                "priority": 102,
                "protocol": "tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "Testing",
              "Epoch": "xb8rpa",
              "Owner": "vikas.yadav@databricks.com"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.dp_rg",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "testvm-nsg",
      "provider": "module.adb-with-private-link-standard.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-xb8rpa-testvm-nsg",
            "location": "westeurope",
            "name": "tfdemo-xb8rpa-testvm-nsg",
            "resource_group_name": "adb-transit-tfdemo-xb8rpa-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "165.225.240.244"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "Testing",
              "Epoch": "xb8rpa",
              "Owner": "vikas.yadav@databricks.com"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "transit_sg",
      "provider": "module.adb-with-private-link-standard.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-xb8rpa-transit-nsg",
            "location": "westeurope",
            "name": "tfdemo-xb8rpa-transit-nsg",
            "resource_group_name": "adb-transit-tfdemo-xb8rpa-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "AzureActiveDirectory",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowAAD-transit",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "AzureFrontDoor.Frontend",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowAzureFrontDoor-transit",
                "priority": 201,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker communication with Azure Eventhub services.",
                "destination_address_prefix": "EventHub",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9093",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-eventhub",
                "priority": 103,
                "protocol": "tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker nodes communication within a cluster.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-inbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker nodes communication within a cluster.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-outbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Azure SQL services.",
                "destination_address_prefix": "Sql",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-sql",
                "priority": 101,
                "protocol": "tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Azure Storage services.",
                "destination_address_prefix": "Storage",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-storage",
                "priority": 102,
                "protocol": "tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "Testing",
              "Epoch": "xb8rpa",
              "Owner": "vikas.yadav@databricks.com"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "dp_aad",
      "provider": "module.adb-with-private-link-standard.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "AzureActiveDirectory",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dp-tfdemo-xb8rpa-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-xb8rpa-dp-nsg/securityRules/AllowAAD-dp",
            "name": "AllowAAD-dp",
            "network_security_group_name": "tfdemo-xb8rpa-dp-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "adb-dp-tfdemo-xb8rpa-rg",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_network_security_group.dp_sg",
            "module.adb-with-private-link-standard.azurerm_resource_group.dp_rg",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "dp_azfrontdoor",
      "provider": "module.adb-with-private-link-standard.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "AzureFrontDoor.Frontend",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dp-tfdemo-xb8rpa-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-xb8rpa-dp-nsg/securityRules/AllowAzureFrontDoor-dp",
            "name": "AllowAzureFrontDoor-dp",
            "network_security_group_name": "tfdemo-xb8rpa-dp-nsg",
            "priority": 201,
            "protocol": "Tcp",
            "resource_group_name": "adb-dp-tfdemo-xb8rpa-rg",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_network_security_group.dp_sg",
            "module.adb-with-private-link-standard.azurerm_resource_group.dp_rg",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "test0",
      "provider": "module.adb-with-private-link-standard.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-xb8rpa-testvm-nsg/securityRules/RDP",
            "name": "RDP",
            "network_security_group_name": "tfdemo-xb8rpa-testvm-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "adb-transit-tfdemo-xb8rpa-rg",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "165.225.240.244"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_network_security_group.testvm-nsg",
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.data.http.my_public_ip",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "transit_aad",
      "provider": "module.adb-with-private-link-standard.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "AzureActiveDirectory",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-xb8rpa-transit-nsg/securityRules/AllowAAD-transit",
            "name": "AllowAAD-transit",
            "network_security_group_name": "tfdemo-xb8rpa-transit-nsg",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "adb-transit-tfdemo-xb8rpa-rg",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_network_security_group.transit_sg",
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "transit_azfrontdoor",
      "provider": "module.adb-with-private-link-standard.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "AzureFrontDoor.Frontend",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-xb8rpa-transit-nsg/securityRules/AllowAzureFrontDoor-transit",
            "name": "AllowAzureFrontDoor-transit",
            "network_security_group_name": "tfdemo-xb8rpa-transit-nsg",
            "priority": 201,
            "protocol": "Tcp",
            "resource_group_name": "adb-transit-tfdemo-xb8rpa-rg",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_network_security_group.transit_sg",
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "testvmpublicip",
      "provider": "module.adb-with-private-link-standard.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/publicIPAddresses/tfdemo-xb8rpa-vmpublicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.214.227.48",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "tfdemo-xb8rpa-vmpublicip",
            "resource_group_name": "adb-transit-tfdemo-xb8rpa-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dp_plsubnet",
      "provider": "module.adb-with-private-link-standard.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.179.0.128/26"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dp-tfdemo-xb8rpa-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-xb8rpa-dp-vnet/subnets/tfdemo-xb8rpa-dp-privatelink",
            "name": "tfdemo-xb8rpa-dp-privatelink",
            "resource_group_name": "adb-dp-tfdemo-xb8rpa-rg",
            "virtual_network_name": "tfdemo-xb8rpa-dp-vnet"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.dp_rg",
            "module.adb-with-private-link-standard.azurerm_virtual_network.dp_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dp_private",
      "provider": "module.adb-with-private-link-standard.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.179.0.64/26"
            ],
            "delegation": [
              {
                "name": "databricks",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": true,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dp-tfdemo-xb8rpa-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-xb8rpa-dp-vnet/subnets/tfdemo-xb8rpa-dp-private",
            "name": "tfdemo-xb8rpa-dp-private",
            "resource_group_name": "adb-dp-tfdemo-xb8rpa-rg",
            "virtual_network_name": "tfdemo-xb8rpa-dp-vnet"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.dp_rg",
            "module.adb-with-private-link-standard.azurerm_virtual_network.dp_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dp_public",
      "provider": "module.adb-with-private-link-standard.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.179.0.0/26"
            ],
            "delegation": [
              {
                "name": "databricks",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dp-tfdemo-xb8rpa-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-xb8rpa-dp-vnet/subnets/tfdemo-xb8rpa-dp-public",
            "name": "tfdemo-xb8rpa-dp-public",
            "resource_group_name": "adb-dp-tfdemo-xb8rpa-rg",
            "virtual_network_name": "tfdemo-xb8rpa-dp-vnet"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.dp_rg",
            "module.adb-with-private-link-standard.azurerm_virtual_network.dp_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "testvmsubnet",
      "provider": "module.adb-with-private-link-standard.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.178.6.0/23"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-xb8rpa-transit-vnet/subnets/tfdemo-xb8rpa-testvmsubnet",
            "name": "tfdemo-xb8rpa-testvmsubnet",
            "resource_group_name": "adb-transit-tfdemo-xb8rpa-rg",
            "virtual_network_name": "tfdemo-xb8rpa-transit-vnet"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.azurerm_virtual_network.transit_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "transit_plsubnet",
      "provider": "module.adb-with-private-link-standard.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.178.0.128/26"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-xb8rpa-transit-vnet/subnets/tfdemo-xb8rpa-transit-privatelink",
            "name": "tfdemo-xb8rpa-transit-privatelink",
            "resource_group_name": "adb-transit-tfdemo-xb8rpa-rg",
            "virtual_network_name": "tfdemo-xb8rpa-transit-vnet"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.azurerm_virtual_network.transit_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "transit_private",
      "provider": "module.adb-with-private-link-standard.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.178.0.64/26"
            ],
            "delegation": [
              {
                "name": "databricks",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": true,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-xb8rpa-transit-vnet/subnets/tfdemo-xb8rpa-transit-private",
            "name": "tfdemo-xb8rpa-transit-private",
            "resource_group_name": "adb-transit-tfdemo-xb8rpa-rg",
            "virtual_network_name": "tfdemo-xb8rpa-transit-vnet"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.azurerm_virtual_network.transit_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "transit_public",
      "provider": "module.adb-with-private-link-standard.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.178.0.0/26"
            ],
            "delegation": [
              {
                "name": "databricks",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-xb8rpa-transit-vnet/subnets/tfdemo-xb8rpa-transit-public",
            "name": "tfdemo-xb8rpa-transit-public",
            "resource_group_name": "adb-transit-tfdemo-xb8rpa-rg",
            "virtual_network_name": "tfdemo-xb8rpa-transit-vnet"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.azurerm_virtual_network.transit_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "dp_private",
      "provider": "module.adb-with-private-link-standard.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dp-tfdemo-xb8rpa-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-xb8rpa-dp-vnet/subnets/tfdemo-xb8rpa-dp-private",
            "network_security_group_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dp-tfdemo-xb8rpa-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-xb8rpa-dp-nsg",
            "subnet_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dp-tfdemo-xb8rpa-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-xb8rpa-dp-vnet/subnets/tfdemo-xb8rpa-dp-private"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_network_security_group.dp_sg",
            "module.adb-with-private-link-standard.azurerm_resource_group.dp_rg",
            "module.adb-with-private-link-standard.azurerm_subnet.dp_private",
            "module.adb-with-private-link-standard.azurerm_virtual_network.dp_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "dp_public",
      "provider": "module.adb-with-private-link-standard.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dp-tfdemo-xb8rpa-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-xb8rpa-dp-vnet/subnets/tfdemo-xb8rpa-dp-public",
            "network_security_group_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dp-tfdemo-xb8rpa-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-xb8rpa-dp-nsg",
            "subnet_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dp-tfdemo-xb8rpa-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-xb8rpa-dp-vnet/subnets/tfdemo-xb8rpa-dp-public"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_network_security_group.dp_sg",
            "module.adb-with-private-link-standard.azurerm_resource_group.dp_rg",
            "module.adb-with-private-link-standard.azurerm_subnet.dp_public",
            "module.adb-with-private-link-standard.azurerm_virtual_network.dp_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "transit_private",
      "provider": "module.adb-with-private-link-standard.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-xb8rpa-transit-vnet/subnets/tfdemo-xb8rpa-transit-private",
            "network_security_group_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-xb8rpa-transit-nsg",
            "subnet_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-xb8rpa-transit-vnet/subnets/tfdemo-xb8rpa-transit-private"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_network_security_group.transit_sg",
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.azurerm_subnet.transit_private",
            "module.adb-with-private-link-standard.azurerm_virtual_network.transit_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "transit_public",
      "provider": "module.adb-with-private-link-standard.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-xb8rpa-transit-vnet/subnets/tfdemo-xb8rpa-transit-public",
            "network_security_group_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-xb8rpa-transit-nsg",
            "subnet_id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-xb8rpa-transit-vnet/subnets/tfdemo-xb8rpa-transit-public"
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_network_security_group.transit_sg",
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.azurerm_subnet.transit_public",
            "module.adb-with-private-link-standard.azurerm_virtual_network.transit_vnet",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "dp_vnet",
      "provider": "module.adb-with-private-link-standard.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.179.0.0/20"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c8aecaaa-10ac-4a69-a2c1-84061517ea19",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dp-tfdemo-xb8rpa-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-xb8rpa-dp-vnet",
            "location": "westeurope",
            "name": "tfdemo-xb8rpa-dp-vnet",
            "resource_group_name": "adb-dp-tfdemo-xb8rpa-rg",
            "subnet": [
              {
                "address_prefix": "10.179.0.0/26",
                "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dp-tfdemo-xb8rpa-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-xb8rpa-dp-vnet/subnets/tfdemo-xb8rpa-dp-public",
                "name": "tfdemo-xb8rpa-dp-public",
                "security_group": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dp-tfdemo-xb8rpa-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-xb8rpa-dp-nsg"
              },
              {
                "address_prefix": "10.179.0.128/26",
                "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dp-tfdemo-xb8rpa-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-xb8rpa-dp-vnet/subnets/tfdemo-xb8rpa-dp-privatelink",
                "name": "tfdemo-xb8rpa-dp-privatelink"
              },
              {
                "address_prefix": "10.179.0.64/26",
                "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dp-tfdemo-xb8rpa-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-xb8rpa-dp-vnet/subnets/tfdemo-xb8rpa-dp-private",
                "name": "tfdemo-xb8rpa-dp-private",
                "security_group": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-dp-tfdemo-xb8rpa-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-xb8rpa-dp-nsg"
              }
            ],
            "tags": {
              "Environment": "Testing",
              "Epoch": "xb8rpa",
              "Owner": "vikas.yadav@databricks.com"
            }
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.dp_rg",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    },
    {
      "module": "module.adb-with-private-link-standard",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "transit_vnet",
      "provider": "module.adb-with-private-link-standard.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.178.0.0/20"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "aa2ae76d-6bc2-428f-a8f3-ffb2fa2e0180",
            "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-xb8rpa-transit-vnet",
            "location": "westeurope",
            "name": "tfdemo-xb8rpa-transit-vnet",
            "resource_group_name": "adb-transit-tfdemo-xb8rpa-rg",
            "subnet": [
              {
                "address_prefix": "10.178.0.0/26",
                "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-xb8rpa-transit-vnet/subnets/tfdemo-xb8rpa-transit-public",
                "name": "tfdemo-xb8rpa-transit-public",
                "security_group": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-xb8rpa-transit-nsg"
              },
              {
                "address_prefix": "10.178.0.128/26",
                "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-xb8rpa-transit-vnet/subnets/tfdemo-xb8rpa-transit-privatelink",
                "name": "tfdemo-xb8rpa-transit-privatelink"
              },
              {
                "address_prefix": "10.178.0.64/26",
                "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-xb8rpa-transit-vnet/subnets/tfdemo-xb8rpa-transit-private",
                "name": "tfdemo-xb8rpa-transit-private",
                "security_group": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/networkSecurityGroups/tfdemo-xb8rpa-transit-nsg"
              },
              {
                "address_prefix": "10.178.6.0/23",
                "id": "/subscriptions/3f2e4d32-8e8d-46d6-82bc-5bb8d962328b/resourceGroups/adb-transit-tfdemo-xb8rpa-rg/providers/Microsoft.Network/virtualNetworks/tfdemo-xb8rpa-transit-vnet/subnets/tfdemo-xb8rpa-testvmsubnet",
                "name": "tfdemo-xb8rpa-testvmsubnet"
              }
            ],
            "tags": {
              "Environment": "Testing",
              "Epoch": "xb8rpa",
              "Owner": "vikas.yadav@databricks.com"
            }
          },
          "dependencies": [
            "module.adb-with-private-link-standard.azurerm_resource_group.transit_rg",
            "module.adb-with-private-link-standard.data.external.me",
            "module.adb-with-private-link-standard.random_string.naming"
          ]
        }
      ]
    }
  ]
}